# dynastic

./: .gitignore  README.md  gen-ts.js  gen-ts.sh  notes.md  package-lock.json  package.json  schema.json
public/: index.html
public/fonts/PermanentMarker/: font.css
public/fonts/Roboto/: font.css
schemas/: Fact.json  Person.json
src/: App.svelte  config.ts  data.d.ts  global.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  model.rs
src-tauri/src/model/: agent.rs  date.rs  event.rs  fact.rs  mod.rs  name.rs  person.rs  place.rs  relationship.rs  source.rs
