[package]
name = "dynastic"
version = "0.1.0"
description = "Genealogy software"
authors = ["Benedikt Werner <1benediktwerner@gmail.com>"]
license = "MIT"
default-run = "main"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", optional = true }

[dependencies]
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-beta.8", features = [], optional = true }

[features]
standalone = ["tauri", "tauri-build"]

[[bin]]
name = "gen-ts"
bench = false
test = false
required-features = ["schemars"]
